# 24k-effect

./: .gitignore  CMakeLists.txt  Makefile  README.md
components/light/: CMakeLists.txt  Makefile  light.c
components/light/include/: light.h
components/module/: CMakeLists.txt  Makefile  module.c
components/module/include/: module.h
example/: render.js
jerryscript/: Makefile
jerryscript/jerry-core/: Makefile
jerryscript/jerry-ext/: Makefile
jerryscript/jerry-main/: Makefile
jerryscript/jerry-port/default/: Makefile
src/: jerry.c  main.c  worker.c
src/inlcude/: jerry.h  worker.h
